# ISEE-ZYNQFaceRec

./: README.en.md  README.md  结题答辩.pptx  项目步骤记录.docx
boot_image/: uImage
boot_image/2017/: 7z010.bit  u-boot.elf  uImage
boot_image/2018/: devicetree.dtb
boot_image/petalinux/: image.ub
boot_image/petalinux/历史版本/: image.ub
boot_image/传统移植/: 7z010.bit  devicetree.dtb  u-boot.elf
boot_image/传统移植/历史版本/2017/: devicetree.dtb
boot_image/传统移植/历史版本/2018/: u-boot.elf
nfs/: Application  edge_detection  faceCollect  faceRecognition  identity.txt  identity.txt.bak  show.sh  showFrame
nfs/trained!d!ata/: maskedtrainedmodel.txt  name.txt  trainedmodel.txt
nfs/traineddata/: trainedmodel.xml  trainedmodel.yml
src/camera/: CMakeLists.txt
src/camera/include/: camera.h
src/camera/src/: camera.cpp  main.cpp
src/face_rec/: CMakeLists.txt  README  toolchain.cmake
src/face_rec/Examples/: faceCollect
src/face_rec/include/: camera.h  detectObject.h  preprocessFace.h  recognition.h
src/face_rec/src/: ImageUtils.cpp  camera.cpp  detectObject.cpp  main.cpp  mode_collect.cpp  mode_rec.cpp  preprocessFace.cpp  recognition.cpp  showFrame.cpp
test/opencv/: edge_detection  hello  vdma_test
vivado/vivado.srcs/constrs_1/new/: lab11.xdc
vivado/vivado.srcs/sources_1/bd/design_1/hdl/: design_1_wrapper.v
vivado/vivado.srcs/sources_1/bd/design_1/hw_handoff/: design_1.hwh  design_1_bd.tcl
vivado/vivado.srcs/sources_1/bd/design_1/ip/design_1_auto_pc_0/: design_1_auto_pc_0.dcp  design_1_auto_pc_0.xci  design_1_auto_pc_0.xml  design_1_auto_pc_0_sim_netlist.v  design_1_auto_pc_0_sim_netlist.vhdl  design_1_auto_pc_0_stub.v  design_1_auto_pc_0_stub.vhdl
vivado/vivado.srcs/sources_1/bd/design_1/ip/design_1_auto_pc_0/sim/: design_1_auto_pc_0.v
vivado/vivado.srcs/sources_1/bd/design_1/ip/design_1_auto_pc_0/synth/: design_1_auto_pc_0.v
vivado/vivado.srcs/sources_1/bd/design_1/ip/design_1_auto_pc_1/: design_1_auto_pc_1.dcp  design_1_auto_pc_1.xci  design_1_auto_pc_1.xml  design_1_auto_pc_1_sim_netlist.v  design_1_auto_pc_1_sim_netlist.vhdl  design_1_auto_pc_1_stub.v  design_1_auto_pc_1_stub.vhdl
vivado/vivado.srcs/sources_1/bd/design_1/ip/design_1_auto_pc_1/sim/: design_1_auto_pc_1.v
vivado/vivado.srcs/sources_1/bd/design_1/ip/design_1_auto_pc_1/synth/: design_1_auto_pc_1.v
vivado/vivado.srcs/sources_1/bd/design_1/ip/design_1_auto_pc_2/: design_1_auto_pc_2.dcp  design_1_auto_pc_2.xci  design_1_auto_pc_2.xml  design_1_auto_pc_2_sim_netlist.v  design_1_auto_pc_2_sim_netlist.vhdl  design_1_auto_pc_2_stub.v  design_1_auto_pc_2_stub.vhdl
vivado/vivado.srcs/sources_1/bd/design_1/ip/design_1_axi_interconnect_0_1/: design_1_axi_interconnect_0_1.xci  design_1_axi_interconnect_0_1.xml
vivado/vivado.srcs/sources_1/bd/design_1/ip/design_1_axi_interconnect_1_0/: design_1_axi_interconnect_1_0.xci  design_1_axi_interconnect_1_0.xml
vivado/vivado.srcs/sources_1/bd/design_1/ip/design_1_axi_vdma_0_0/: design_1_axi_vdma_0_0.dcp  design_1_axi_vdma_0_0.xci  design_1_axi_vdma_0_0.xml  design_1_axi_vdma_0_0_sim_netlist.v  design_1_axi_vdma_0_0_sim_netlist.vhdl  design_1_axi_vdma_0_0_stub.v  design_1_axi_vdma_0_0_stub.vhdl
vivado/vivado.srcs/sources_1/bd/design_1/ip/design_1_hls_sobel_0_0/: design_1_hls_sobel_0_0.dcp  design_1_hls_sobel_0_0.xci  design_1_hls_sobel_0_0.xml  design_1_hls_sobel_0_0_sim_netlist.v  design_1_hls_sobel_0_0_sim_netlist.vhdl  design_1_hls_sobel_0_0_stub.v  design_1_hls_sobel_0_0_stub.vhdl
vivado/vivado.srcs/sources_1/bd/design_1/ip/design_1_ila_0_0/: design_1_ila_0_0.dcp  design_1_ila_0_0.xci  design_1_ila_0_0_sim_netlist.v  design_1_ila_0_0_stub.v  design_1_ila_0_0_stub.vhdl
vivado/vivado.srcs/sources_1/bd/design_1/ip/design_1_ila_1_0/: design_1_ila_1_0.dcp  design_1_ila_1_0.xci  design_1_ila_1_0_sim_netlist.v  design_1_ila_1_0_stub.v  design_1_ila_1_0_stub.vhdl
vivado/vivado.srcs/sources_1/bd/design_1/ip/design_1_proc_sys_reset_0_0/: design_1_proc_sys_reset_0_0.dcp  design_1_proc_sys_reset_0_0.xci  design_1_proc_sys_reset_0_0.xml  design_1_proc_sys_reset_0_0_sim_netlist.v  design_1_proc_sys_reset_0_0_sim_netlist.vhdl  design_1_proc_sys_reset_0_0_stub.v  design_1_proc_sys_reset_0_0_stub.vhdl
vivado/vivado.srcs/sources_1/bd/design_1/ip/design_1_processing_system7_0_0/: design_1_processing_system7_0_0.dcp  design_1_processing_system7_0_0.xci  design_1_processing_system7_0_0.xdc  design_1_processing_system7_0_0.xml  design_1_processing_system7_0_0_sim_netlist.v  design_1_processing_system7_0_0_sim_netlist.vhdl  design_1_processing_system7_0_0_stub.v  design_1_processing_system7_0_0_stub.vhdl  ps7_init.c  ps7_init.html  ps7_init.tcl  ps7_init_gpl.c  ps7_parameters.xml
vivado/vivado.srcs/sources_1/bd/design_1/ip/design_1_xbar_1/: design_1_xbar_1.dcp  design_1_xbar_1.xci  design_1_xbar_1.xml  design_1_xbar_1_sim_netlist.v  design_1_xbar_1_sim_netlist.vhdl  design_1_xbar_1_stub.v  design_1_xbar_1_stub.vhdl
vivado/vivado.srcs/sources_1/bd/design_1/ip/design_1_xbar_2/: design_1_xbar_2.dcp  design_1_xbar_2.xci  design_1_xbar_2.xml  design_1_xbar_2_sim_netlist.v  design_1_xbar_2_sim_netlist.vhdl  design_1_xbar_2_stub.v  design_1_xbar_2_stub.vhdl
vivado/vivado.srcs/sources_1/bd/design_1/ip/design_1_xlconcat_0_0/: design_1_xlconcat_0_0.dcp  design_1_xlconcat_0_0.xci  design_1_xlconcat_0_0.xml  design_1_xlconcat_0_0_sim_netlist.v  design_1_xlconcat_0_0_sim_netlist.vhdl  design_1_xlconcat_0_0_stub.v  design_1_xlconcat_0_0_stub.vhdl
vivado/vivado.srcs/sources_1/bd/design_1/ip/design_1_xlconstant_0_0/: design_1_xlconstant_0_0.dcp  design_1_xlconstant_0_0.xci  design_1_xlconstant_0_0.xml  design_1_xlconstant_0_0_sim_netlist.v  design_1_xlconstant_0_0_sim_netlist.vhdl  design_1_xlconstant_0_0_stub.v  design_1_xlconstant_0_0_stub.vhdl
vivado/vivado.srcs/sources_1/bd/design_1/ip/design_1_xlconstant_1_0/: design_1_xlconstant_1_0.dcp  design_1_xlconstant_1_0.xci  design_1_xlconstant_1_0.xml  design_1_xlconstant_1_0_sim_netlist.v  design_1_xlconstant_1_0_sim_netlist.vhdl  design_1_xlconstant_1_0_stub.v  design_1_xlconstant_1_0_stub.vhdl
(+23 files in other folders)
